--- a/pom.xml
+++ b/pom.xml
@@ -10,23 +10,26 @@
     <name>SpaceAdvisor Automation</name>
 
     <properties>
+        <!-- Java -->
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <serenity.version>4.2.32</serenity.version>
+
+        <!-- Versions -->
+        <serenity.version>4.2.34</serenity.version>
+        <junit4.version>4.13.2</junit4.version>
+        <webdrivermanager.version>6.3.2</webdrivermanager.version>
+        <slf4j.version>2.0.16</slf4j.version>
+
+        <maven.surefire.plugin.version>3.0.0</maven.surefire.plugin.version>
+        <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
+
         <maven.build.timestamp.format>dd-MM-yyyy</maven.build.timestamp.format>
     </properties>
 
+    <!-- Importante: sin BOM ni dependencias explícitas de io.cucumber -->
     <dependencies>
-        <!-- WebDriver Manager -->
-        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
-        <dependency>
-            <groupId>io.github.bonigarcia</groupId>
-            <artifactId>webdrivermanager</artifactId>
-            <version>6.1.0</version>
-        </dependency>
-
-        <!-- SERENITY (Core + JUnit 4 + Screenplay) -->
+        <!-- Serenity (core, junit4, Screenplay, WebDriver, Cucumber bridge) -->
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-core</artifactId>
@@ -53,41 +56,60 @@
             <version>${serenity.version}</version>
         </dependency>
 
-        <!-- JUnit -->
+        <!-- JUnit 4 (requerido por @RunWith(CucumberWithSerenity.class)) -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.1</version>
+            <version>${junit4.version}</version>
+            <scope>test</scope>
         </dependency>
 
-        <!-- Cucumber -->
+        <!-- WebDriverManager (opcional si no usas drivers.autodownload) -->
         <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-java</artifactId>
-            <version>7.20.1</version>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>${webdrivermanager.version}</version>
+            <scope>test</scope>
         </dependency>
+
+        <!-- Logger simple para evitar el warning de SLF4J -->
         <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-junit</artifactId>
-            <version>7.20.1</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <!-- Maven Compiler Plugin -->
+            <!-- Compiler -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>${maven.compiler.plugin.version}</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
 
-            <!-- Serenity Maven Plugin -->
+            <!-- Surefire (JUnit 4 runner; patrón para tus runners) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.plugin.version}</version>
+                <configuration>
+                    <includes>
+                        <include>**/Runner*.java</include>
+                        <include>**/*Runner.java</include>
+                    </includes>
+                    <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
+                </configuration>
+            </plugin>
+
+            <!-- Serenity reports en verify -->
             <plugin>
                 <groupId>net.serenity-bdd.maven.plugins</groupId>
                 <artifactId>serenity-maven-plugin</artifactId>
@@ -95,7 +117,6 @@
                 <executions>
                     <execution>
                         <id>serenity-reports</id>
-                        <!-- Recomendado usar la fase "verify" -->
                         <phase>verify</phase>
                         <goals>
                             <goal>aggregate</goal>
@@ -103,19 +124,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <!-- Maven Surefire Plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0</version>
-                <configuration>
-                    <includes>
-                        <include>**/Runner*.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 </project>
-
