--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -9,36 +9,38 @@ serenity {
 headless.mode = false
 
 webdriver {
-  driver = chrome
   autodownload = true
-  capabilities {
-    "goog:chromeOptions" {
-      args = [
-        "test-type",
-        "no-sandbox",
-        "lang=es",
-        "disable-popup-blocking",
-        "disable-download-notification",
-        "ignore-certificate-errors",
-        "allow-running-insecure-content",
-        "disable-translate",
-        "always-authorize-plugins",
-        "disable-extensions",
-        "remote-allow-origins=*",
-        "--disable-gpu"
-      ]
-    }
+
+  timeouts {
+    implicitlywait = 0
+    webdriverwait = 10000
   }
 }
 
 environments {
   default {
+    webdriver.driver = chrome
     webdriver.base.url = "https://demo.testim.io"
+    webdriver.capabilities."acceptInsecureCerts" = true
+    webdriver.capabilities."goog:chromeOptions".args = [
+      "--start-maximized",
+      "disable-popup-blocking",
+      "ignore-certificate-errors",
+      "remote-allow-origins=*"
+    ]
   }
-  stg {
-    webdriver.base.url = ""
-  }
-  prod {
-    webdriver.base.url = ""
-  }
+
+  firefox {
+      webdriver.driver = firefox
+      webdriver.base.url = "https://demo.testim.io"
+      webdriver.capabilities."acceptInsecureCerts" = true
+      webdriver.capabilities."moz:firefoxOptions".args = [
+        "-private"
+      ]
+      webdriver.capabilities."moz:firefoxOptions".prefs = {
+        "dom.disable_open_during_load" = true
+        "security.cert_pinning.enforcement_level" = 0
+      }
+    }
+
 }
